# electro

./: .dockerignore  .env.example  .gitignore  ADMIN_READINGS_FEATURE.md  CHANGELOG_ADMIN_READINGS.md  CLI_USAGE.md  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  alembic.ini  create-superuser.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.kilocode/: mcp.json
backend/: .env.example  Dockerfile  cli.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: a00ec789044f_initial_migration_users_readings_.py  a1b2c3d4e5f6_case_insensitive_email.py  d22f39b420c8_description_of_the_change.py  f1a2b3c4d5e6_add_unique_constraint_plot_number.py
backend/app/: container.py  telemetry.py
backend/config/: database.ini  settings.py
frontend/: .dockerignore  Dockerfile  Dockerfile.build  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: LoginForm.css  LoginForm.jsx  Navigation.css  Navigation.jsx  PrivateRoute.jsx  ReadingForm.css  ReadingForm.jsx  ReadingHistory.css  ReadingHistory.jsx  RegistrationForm.css  RegistrationForm.jsx  StatusMessage.css  StatusMessage.jsx
frontend/src/context/: AuthContext.jsx
nginx/: Dockerfile  README.md  default-ssl.conf  default.conf
plans/: api_specification.md  authentication_flow.md  data_flow.md  database_schema.md  phase3-frontend-implementation.md  ports_and_adapters.md  project_structure.md  reading_form_design.md  roles_system.md  status_interface.md  telemetry_system.md
(+34 files in other folders)
